--- a/web_app/templates/dashboard-savings.html
+++ b/web_app/templates/dashboard-savings.html
@@ -9,7 +9,7 @@
 
   <div class="savings-info-card">
     <h2>Total Balance</h2>
-    <p>N 0.00</p>
+    <p>&#8358; {{.Balance}}</p>
   </div>
 
   <div class="savings-plans-container">
@@ -18,7 +18,7 @@
       <div class="savings-plans-right-side">
         <h2>Paz Solo Saver</h2>
         <p>Save money regularly in a locked plan with interest of up to 12% per annum.</p>
-        <button class="primary"  href="/dashboard/savings/solo-saver">Start now</button>
+        <a class="button primary" href="/dashboard/savings/solo-saver">Start now</a>
       </div>
     </div>
     <div class="savings-plans">
@@ -26,7 +26,7 @@
       <div class="savings-plans-right-side">
         <h2>Paz Family Vault</h2>
         <p>Save money together with your loved ones and get interest of up to 16% per annum. </p>
-	<button href="/dashboard/savings/solo-saver" class="primary">Start now</button>
+	<a href="/dashboard/savings/family-vault" class="button primary">Start now</a>
       </div>
     </div>
     <div class="savings-plans">
@@ -34,7 +34,7 @@
       <div class="savings-plans-right-side">
         <h2>Paz Target Saver</h2>
         <p>Save money regularly in a locked plan with interest of up to 12% per annum.</p>
-	<button href="/dashboard/savings/solo-saver" class="primary">Start now</button>
+	<a href="/dashboard/savings/target-savings" class="button primary">Start now</a>
       </div>
     </div>
   </div>
