--- a/web_app/templates/fragments/bvn-modal.html
+++ b/web_app/templates/fragments/bvn-modal.html
@@ -13,7 +13,7 @@
 	  <!-- TODO: add regex validation -->
 	</div>
 
-        <input name="submit" type="submit" value="Add BVN"/>
+        <button type="submit" class="primary">Add BVN</button>
     </form>
     <!-- TODO: hx-boosting this link causes a flash of noscript -->
     <a class="form-nav-link" href="/dashboard/home">Back</a>
