--- a/web_app/templates/static/css/base.css
+++ b/web_app/templates/static/css/base.css
@@ -131,6 +131,7 @@ input[type="submit"] {
 
 button, .button {
     border-radius: 8px;
+    cursor: pointer;
 }
 
 button.primary, .button.primary {
@@ -141,9 +142,12 @@ button.primary, .button.primary {
     font-weight: bold;
 }
 
-button.secondary {
+button.secondary, a.secondary {
     color: var(--primary-blue-2);
     background-color: white;
+    padding: 8px 12px;
+    border: none;
+    font-weight: bold;
 }
 
 select {
@@ -160,4 +164,10 @@ button.plain-button {
 a.button {
     text-decoration: none;
     font-weight: bold;
+}
+
+.form-control-error-container > span {
+    font-size: 0.9em;
+    margin-top: 4px;
+    color: red;
 }
