--- a/web_app/templates/static/css/thrift.css
+++ b/web_app/templates/static/css/thrift.css
@@ -18,7 +18,7 @@
 .thrift-plan {
     border-radius: 16px;
     max-width: 480px;
-    padding: 36px 24px;
+    padding: 12px 18px;
     box-shadow: 0px 0px 30px 0px #00000026;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .thrift-plan-heading {
-    font-size: 1.2em;
+    font-size: 1.1em;
     margin: 14px 0px;
 }
 
@@ -63,4 +63,22 @@
     color: var(--dark-green);
     padding: 8px 6px;
     border-radius: 8px;
+}
+
+.thrift-plans-empty-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.thrift-plans-empty-container img {
+    color: #979CA0;
+}
+
+.empty-thrift-plans-text {
+    color: #979CA0;
 }
