--- a/web_app/templates/static/dashboard/home.css
+++ b/web_app/templates/static/dashboard/home.css
@@ -159,6 +159,43 @@
     border-radius: 8px;
 }
 
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+}
+
+.modal-flex-container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+}
+
+#modal-container {
+    min-height: 180px;
+    height: 70%;
+    background-color: white;
+    width: 50%;
+    border-radius: 8px;
+    z-index: 2;
+    padding: 20px 28px;
+}
+
+.hidden {
+    display: none;
+}
+
 #modal-container {
     padding: 48px 54px;
     display: flex;
