--- a/web_app/templates/static/dashboard/savings.css
+++ b/web_app/templates/static/dashboard/savings.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 .savings-info-card {
-    padding: 18px 14px;
+    padding: 16px 16px;
     border: 1px solid #ACB5BD;
     border-radius: 8px;
     min-width: 240px;
@@ -14,7 +14,7 @@ h1 {
 
 .savings-info-card > h2 {
     font-size: 0.8em;
-    margin: 12px 0px;
+    margin: 4px 0px;
 }
 
 .savings-info-card > p {
@@ -44,14 +44,15 @@ h1 {
 .savings-plans-right-side > h2 {
     margin: 12px 0px;
     font-size: 1.2em;
-    font-weight: 500;
+    font-weight: bold;
     font-family: "Montserrat", sans-serif;
 }
 
-.savings-plans-right-side > button {
-    margin-top: 24px;
+.savings-plans-right-side a.button {
+    margin: 24px 0px; 
     width: fit-content;
     align-self: flex-end;
+    background-color: var(--primary-blue-1);
 }
 
 .savings-plans:nth-of-type(1) {
